fixed box sizing and double tap to zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     font-size: 16px;
-    box-sizing: border-box;
 }
 
 body {
@@ -12,32 +11,32 @@ body {
     background: radial-gradient(circle, rgba(88,88,88,1) 1%, rgba(10,10,9,1) 90%);
     font-family: 'Darumadrop One', cursive;
     color: white;
-}
-
-h1 {
-    font-size: 4em;
-}
-
-h2{
-    font-size: 2em;
-    margin-bottom: 1em;
-}
-
-.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    max-height: 100vh;
+    box-sizing: border-box;
+    width: 100vw;
+}
+
+span {
+    display: inline-block;
+    width: 100%;
+    font-size: 2em;
+}
+
+.container {
+    background: #000;
+    border-radius: 10px;
+    padding: 15px;
+    max-width: 90vw;
 }
 
 .drum-machine {
     display: grid;
     gap: .05em;
     grid-template-columns: repeat(3, 1fr);
-    background: #000;
-    border-radius: 10px;
 }
 
 .tap {
